added one comment Added comment on new user button for clarification

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <!--New Here? -->
 
       <!-- Button for newbie -->
+      <!-- button will no longer displaya after form is complete -->
       <div class="text-center m-4">
         <button type="button" class="btn btn-primary " data-toggle="" data-target="" data-whatever="">Create Your Gym!</button>
       </div>
