--- a/shop.html
+++ b/shop.html
@@ -60,7 +60,7 @@
     <main class="container-fluid bg-danger d-center">
       
       <div class="card m-3 d-inline-block" style="width: 18rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
+          <img class="card-img-top" src="https://via.placeholder.com/250" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Pokemon name</h5>
             <p class="card-text">Pokemon informatin provided by API maybe lol</p>
@@ -73,7 +73,7 @@
       </div>
       
       <div class="card m-3 d-inline-block" style="width: 18rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
+          <img class="card-img-top" src="https://via.placeholder.com/250" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Pokemon name</h5>
             <p class="card-text">Pokemon informatin provided by API maybe lol</p>
@@ -85,7 +85,7 @@
       </div>
 
       <div class="card m-3 d-inline-block" style="width: 18rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
+          <img class="card-img-top" src="https://via.placeholder.com/250" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Pokemon name</h5>
             <p class="card-text">Pokemon informatin provided by API maybe lol</p>
