--- a/shop.html
+++ b/shop.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="" />
-    <title>Boilerplate :)</title>
+did this for bnoth    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <title>PokeShop</title>
   </head>
 
   
   <body>
     <header class="container-fluid bg-primary">
-        <h1 class="bg-secondary">Pokeshop</h1>
+        <h1 class="bg-secondary p-3">Pokeshop</h1>
           
         <!-- nav links -->
         <div class="bg-warning">
@@ -22,36 +23,42 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Show Money</a>
+                <!--* Pokecoin image ⬇️⬇️ -->
+                <!-- <img src="./assets/images/pokecoin.png" alt="pokecoin logo" class="" style="height: 55%;width: 23%;"> -->
               </li>
             </ul>
         </div>
     </header>
 
 
-    <!-- search bar and filter-->
-    <div class="container-fluid bg-info">
-      <!--text  input  -->
-      <nav class="navbar navbar-light bg-light">
-          <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <!-- search button -->
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
+   
+      <!-- search bar and filter-->
+      <div class="container-fluid bg-info bg-light">
+        <!--text  input  -->
+        <nav class="navbar navbar-light">
+            <form class="form-inline">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <!-- search button -->
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
 
-          <!-- filter dropdown -->
-          <!-- TODO: fix dropdown as of now it shows but doesnt actually drop down -->
-          <div class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown button
-              </button>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+            <!-- filter dropdown -->
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Filter by
+                </button>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#">Type</a>
+                  <a class="dropdown-item" href="#">Gender</a>
+                  <a class="dropdown-item" href="#">Rarity</a>
+                </div>
               </div>
-            </div>
-      </nav>
+        </nav>
+
+
+      </div>
+
 
 
     </div>
@@ -104,6 +111,7 @@
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script src=""></script>
   </body>
 </html>
