added shop logo and icon edited styling a bit

--- a/shop.html
+++ b/shop.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=VT323"/>
     <link rel="stylesheet" href="./assets/css/style.css"/>
     <title>PokeShop</title>
   </head>
@@ -13,7 +14,7 @@
   
   <body>
       <header class="container-fluid bg-primary">
-        <h1 class="bg-secondary p-3">Pokeshop</h1>
+        <h1 class="bg-secondary p-3"><img src="./assets/images/Poke-bag.png" alt="pokeshop logo" style="height: 55px;width: 55px;">Pokeshop</h1>
           
         <!-- nav links -->
         <div class="bg-warning">
