--- a/shop.html
+++ b/shop.html
@@ -46,7 +46,7 @@
             <h5 class="card-title">Poké Ball</h5>
             <p class="card-text">The most basic form of a Poké Ball. It is an item used to catch Pokémon and has a low chance of catching rare pokemon.</p>
             <div class="text-center">
-              <a id="" href="#" class="btn btn-primary poke-buy-btn">Buy</a>
+              <a id="poke-standard" href="#" class="btn btn-primary poke-buy-btn">Buy</a>
             </div>
           </div>
         </div>
@@ -57,7 +57,7 @@
             <h5 class="card-title">Great Ball</h5>
             <p class="card-text">It is an improved variant of the regular Poké Ball that has an increased chance of catching rarer Pokémon.</p>  
             <div class="text-center">
-              <a id="" href="#" class="btn btn-primary poke-buy-btn">Buy</a>
+              <a id="poke-legendary" href="#" class="btn btn-primary poke-buy-btn">Buy</a>
             </div>
           </div>
         </div>
@@ -68,7 +68,7 @@
             <h5 class="card-title">Master Ball</h5>
             <p class="card-text">It is an improved variant of the Great Ball that has an increased chance of catching rarer Pokémon.</p>
             <div class="text-center">
-              <a id="" href="#" class="btn btn-primary poke-buy-btn">Buy</a>
+              <a id="poke-mythic" href="#" class="btn btn-primary poke-buy-btn">Buy</a>
             </div>
           </div>
         </div>
