changed shop header color

--- a/shop.html
+++ b/shop.html
@@ -14,7 +14,7 @@
   
   <body>
       <header class="container-fluid bg-primary">
-        <h1 class="bg-secondary p-3"><img src="./assets/images/Poke-bag.png" alt="pokeshop logo" style="height: 55px;width: 55px;">Pokeshop</h1>
+        <h1 class="bg-warning p-3"><img src="./assets/images/Poke-bag.png" alt="pokeshop logo" style="height: 55px;width: 55px;">Pokeshop</h1>
           
         <!-- nav links -->
         <div class="bg-warning">
