took out gender tag

--- a/index.html
+++ b/index.html
@@ -144,10 +144,9 @@
       <h2 class="pt-3 pl-2 bg-warning">Inventory: <span id="saved-gym"></span> Gym</h2>
 
       <div id="poke-info-card" class="card m-1 mb-3 d-inline-block" style="width: 10rem; height: 20rem;">
-        <img class="card-img-top" src="https://via.placeholder.com/56x42" alt="Card image cap">
+        <img class="card-img-top" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Pokemon name</h5>
-          <p class="card-text">gender</p>
           <p class="card-text">type</p>
           <p class="card-text">Rarity</p>
 
@@ -165,10 +164,9 @@
       </div>
 
       <div id="poke-info-card" class="card m-1 mb-3 d-inline-block" style="width: 10rem; height: 20rem;">
-        <img class="card-img-top" src="https://via.placeholder.com/56x42" alt="Card image cap">
+        <img class="card-img-top" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/004.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Pokemon name</h5>
-          <p class="card-text">gender</p>
           <p class="card-text">type</p>
           <p class="card-text">Rarity</p>
           
@@ -186,10 +184,9 @@
       </div>
 
       <div id="poke-info-card" class="card m-1 mb-3 d-inline-block" style="width: 10rem; height: 20rem;">
-        <img class="card-img-top" src="https://via.placeholder.com/56x42" alt="Card image cap">
+        <img class="card-img-top" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Pokemon name</h5>
-          <p class="card-text">gender</p>
           <p class="card-text">type</p>
           <p class="card-text">Rarity</p>
 
