added localstorage interactions

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </div>
 
     <!-- Inventory -->
-    <main class="container-fluid bg-danger d-center">
+    <main id="poke-cards-container" class="container-fluid bg-danger d-center">
 
       <h2 class="pt-3 pl-2 bg-warning">Inventory: <span id="saved-gym"></span> Gym</h2>
 
