--- a/shop.html
+++ b/shop.html
@@ -26,7 +26,7 @@
             </li>
             
             <li class="nav-item">
-              <a class="nav-link active" href="./index.html">Home</a>
+              <a id="link-home" class="nav-link active" href="./index.html">Home</a>
             </li>
           </ul>
         </div>
