Updated localstorage interactions
Also added some validation to the coins when buying and switching
between pages.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul class="nav justify-content-end">
           <li class="nav-item">
             <!-- Money Counter display here -->
-            <a id="poke-coin-inv" class="nav-link" href="#"><img src="./assets/images/pokecoin-logo.png" alt="pokecoin logo" class="" >0</a>
+            <a id="poke-coin-inv" class="nav-link" href="#"><img src="./assets/images/pokecoin-logo.png" alt="pokecoin logo" class="">0</a>
           </li>
 
           <li class="nav-item">
@@ -28,7 +28,7 @@
           </li>
           
           <li class="nav-item">
-            <a class="nav-link active" href="./shop.html">Shop</a>
+            <a id="link-shop" class="nav-link active" href="./shop.html">Shop</a>
           </li>
         </ul>
       </div>
@@ -141,7 +141,7 @@
     <!-- Inventory -->
     <main class="container-fluid bg-danger">
 
-      <h2 class="row pt-3 pl-2 bg-warning">Inventory: <span id="saved-gym"></span> Gym</h2>
+      <h2 class="row pt-3 pl-2 bg-warning">Inventory: <span id="saved-gym"></span>-Gym</h2>
 
       <div id="poke-cards-container" class="row d-flex justify-content-center">
         <!-- <div id="poke-info-card" class="card m-1 mb-3 d-inline-block" style="width: 12rem; height: 23rem;">
