--- a/index.html
+++ b/index.html
@@ -91,21 +91,22 @@
         <div class="dropdown">
           <!-- Filter Dropdown -->
           <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Filter</button>
-          <div class="dropdown-menu">
+          <div id="poke-search-filter" class="dropdown-menu">
+            <a class="dropdown-item" href="#pokemon-none">None</a>
             <a class="dropdown-item" href="#pokemon-name">Name</a>
             <a class="dropdown-item" href="#pokemon-rarity">Rarity</a>
             <a class="dropdown-item" href="#pokemon-type">Type</a>
           </div>
 
           <!-- Name Search -->
-          <div class="btn-group">
-            <button id="pokemon-name" class="btn btn-primary" type="button">Name</button>
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-
+            <div id="poke-search-name" class="btn-group" style="display: none;">
+              <button id="pokemon-name" class="btn btn-primary" type="button">Name</button>
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            </div>
             <!-- Pokemon Rarity Dropdown -->
-            <div class="btn-group">
+            <div id="poke-search-rarity" class="btn-group" style="display: none;">
               <button id="pokemon-rarity" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" type="button">Rarity</button>
-              <div class="dropdown-menu">
+              <div id="poke-search-rarity-items" class="dropdown-menu">
                 <a class="dropdown-item" href="#">Standard</a>
                 <a class="dropdown-item" href="#">Legendary</a>
                 <a class="dropdown-item" href="#">Mythic</a>
@@ -113,9 +114,9 @@
             </div>
 
             <!-- Pokemon Type Dropdown -->
-            <div class="btn-group">
+            <div id="poke-search-type" class="btn-group" style="display: none;">
               <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" type="button" id="pokemon-type">Type</button>
-              <div class="dropdown-menu">
+              <div id="poke-search-type-items" class="dropdown-menu">
                 <a class="dropdown-item " href="#">Fire</a>
                 <a class="dropdown-item" href="#">Water</a>
                 <a class="dropdown-item" href="#">Grass</a>
