--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <!-- filter buttons and dropdown -->
         <div class="dropdown">
           <!-- Filter Dropdown -->
-          <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Filter</button>
+          <button id="poke-search-filter-btn" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Filter</button>
           <div id="poke-search-filter" class="dropdown-menu">
             <a class="dropdown-item" href="#pokemon-none">None</a>
             <a class="dropdown-item" href="#pokemon-name">Name</a>
@@ -100,12 +100,12 @@
 
           <!-- Name Search -->
             <div id="poke-search-name" class="btn-group" style="display: none;">
-              <button id="pokemon-name" class="btn btn-primary" type="button">Name</button>
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button id="poke-search-name-btn" class="btn btn-primary" type="button">Name</button>
+              <input id="poke-search-name-bar" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             </div>
             <!-- Pokemon Rarity Dropdown -->
             <div id="poke-search-rarity" class="btn-group" style="display: none;">
-              <button id="pokemon-rarity" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" type="button">Rarity</button>
+              <button id="poke-search-rarity-btn" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" type="button">Rarity</button>
               <div id="poke-search-rarity-items" class="dropdown-menu">
                 <a class="dropdown-item" href="#">Standard</a>
                 <a class="dropdown-item" href="#">Legendary</a>
@@ -115,8 +115,9 @@
 
             <!-- Pokemon Type Dropdown -->
             <div id="poke-search-type" class="btn-group" style="display: none;">
-              <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" type="button" id="pokemon-type">Type</button>
+              <button id="poke-search-type-btn" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" type="button" id="pokemon-type">Type</button>
               <div id="poke-search-type-items" class="dropdown-menu">
+                <a class="dropdown-item " href="#">Normal</a>
                 <a class="dropdown-item " href="#">Fire</a>
                 <a class="dropdown-item" href="#">Water</a>
                 <a class="dropdown-item" href="#">Grass</a>
