Added profile reset button

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
     <!-- Candy Inventory -->
     <footer>
       <nav class="navbar fixed-bottom navbar-light bg-warning text-left p-1">
+        <button id="poke-shop-reset-btn">Reset</button>
         <p class="navbar-brand">Candies</p>
         <p><img src="./assets/images/Candy-sprite.png">Small Candies:<span id="poke-candy-normal">0</span><img src="./assets/images/Candy_L_Sprite.png">Large Candies:<span id="poke-candy-large">0</span><img src="./assets/images/Candy_XL_Sprite.png">Extra Large Candies:<span id="poke-candy-xlarge">0</span></p>
       </nav>
