Finalized reset and candies button
Partner had other events come up so buy candies button was placed into
this branch as well.

--- a/shop.html
+++ b/shop.html
@@ -92,36 +92,36 @@
   
       <!-- Small candy -->
       <div id="candy-card" class="card m-5 d-inline-block" style="width: 15rem; height: 17rem; position: relative;">
-        <img class="card-img-top" src="./assets/images/Candy-sprite.png" alt="small candy" style="width: 50px; height: 50px;"/>
+        <img id="candy-normal" class="card-img-top" src="./assets/images/Candy-sprite.png" alt="small candy" style="width: 50px; height: 50px;"/>
         <div class="card-body">
           <h5 class="card-title">Small Candy</h5>
           <p class="card-text">A candy that is packed with energy. When given to a Pokémon, it will increase that Pokémon's strength.</p>
           <div class="text-center">
-            <a id="" href="#" class="btn btn-primary">Buy</a>
+            <a id="poke-candy-buy-normal" href="#" class="btn btn-primary">Buy(2)</a>
           </div>
         </div>
       </div>
       
       <!-- Large Candy -->
       <div id="candy-card" class="card m-5 d-inline-block" style="width: 15rem; height: 17rem; position: relative;">
-        <img class="card-img-top" src="./assets/images/Candy_L_Sprite.png" style="width: 50px; height: 50px;" alt="large candy"/>
+        <img id="candy-large" class="card-img-top" src="./assets/images/Candy_L_Sprite.png" style="width: 50px; height: 50px;" alt="large candy"/>
         <div class="card-body">
           <h5 class="card-title">Large Candy</h5>
-          <p class="card-text">A candy that is packed with energy. When given to a Pokémon, it will increase that Pokémon's strength.</p>
+          <p class="card-text">A larger candy that packed with energy. When eaten, it will increase that Pokémon's strength a bit more.</p>
           <div class="text-center">
-            <a id="" href="#" class="btn btn-primary">Buy</a>
+            <a id="poke-candy-buy-large" href="#" class="btn btn-primary">Buy(10)</a>
           </div>
         </div>
       </div>
       
       <!-- Extra Large -->
       <div id="candy-card" class="card m-5 d-inline-block" style="width: 15rem; height: 17rem; position: relative;">
-        <img class="card-img-top" src="./assets/images/Candy_XL_Sprite.png" alt="Extra Large candy" style="width: 50px; height: 50px;"/>
+        <img id="candy-xlarge" class="card-img-top" src="./assets/images/Candy_XL_Sprite.png" alt="Extra Large candy" style="width: 50px; height: 50px;"/>
         <div class="card-body">
-          <h5 class="card-title">Extra Large Candy</h5>
-          <p class="card-text">A candy that is packed with energy. When given to a Pokémon, it will increase that Pokémon's strength.</p>
+          <h5 class="card-title">Extra-Large Candy</h5>
+          <p class="card-text">The largest candy. It will increase that Pokémon's strength significantly.</p>
           <div class="text-center">
-            <a id="" href="#" class="btn btn-primary">Buy</a>
+            <a id="poke-candy-buy-xlarge" href="#" class="btn btn-primary">Buy(50)</a>
           </div>
         </div>
       </div>
