--- a/shop.html
+++ b/shop.html
@@ -8,10 +8,28 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P"/>
     <link rel="stylesheet" href="./assets/css/style.css"/>
+     <!-- <div class="themes"> 
+      <link rel="stylesheet" href="./assets/css/themes/fire.css">
+      <link rel="stylesheet" href="./assets/css/themes/grass.css">
+      <link rel="stylesheet" href="./assets/css/themes/water.css">
+      <link rel="stylesheet" href="./assets/css/themes/electric.css">
+      <link rel="stylesheet" href="./assets/css/themes/ice.css">
+      <link rel="stylesheet" href="./assets/css/themes/fighting.css">
+      <link rel="stylesheet" href="./assets/css/themes/poison.css">
+      <link rel="stylesheet" href="./assets/css/themes/ground.css">
+      <link rel="stylesheet" href="./assets/css/themes/flying.css">
+      <link rel="stylesheet" href="./assets/css/themes/psychic.css">
+      <link rel="stylesheet" href="./assets/css/themes/bug.css">
+      <link rel="stylesheet" href="./assets/css/themes/rock.css">
+      <link rel="stylesheet" href="./assets/css/themes/ghost.css">
+      <link rel="stylesheet" href="./assets/css/themes/dark.css">
+      <link rel="stylesheet" href="./assets/css/themes/dragon.css">
+      <link rel="stylesheet" href="./assets/css/themes/steel.css">
+      <link rel="stylesheet" href="./assets/css/themes/fairy.css">
+    </div> -->
     <title>PokeShop</title>
   </head>
 
-  
   <body>
       <header class="container-fluid bg-primary">
         <h1 class="bg-warning p-3"><img src="./assets/images/Poke-bag.png" alt="pokeshop logo" style="height: 55px;width: 55px;">Pokeshop</h1>
