Finalized bug fixes
In the browser I was using local storage didn't persist between pages
so there were a lot of "work arounds" I had to incorporate. Those didn't
work on the github pages deployment (because of the above stated).
Refactored local storage variables and parts of the script to represent
consistent data and data manipulation.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <label for="input-type">Gym Type</label>
             <select id="input-type" class="form-control">
               <option selected>Type</option>
+              <option value="Normal">Normal</option>
               <option value="Fire">Fire</option>
               <option value="Grass">Grass</option>
               <option value="Water">Water</option>
@@ -119,8 +120,9 @@
               <div id="poke-search-type-items" class="dropdown-menu">
                 <a class="dropdown-item " href="#">Normal</a>
                 <a class="dropdown-item " href="#">Fire</a>
-                <a class="dropdown-item" href="#">Water</a>
                 <a class="dropdown-item" href="#">Grass</a>
+                <a class="dropdown-item" href="#">Water</a>
+                <a class="dropdown-item " href="#">Electric</a>
                 <a class="dropdown-item" href="#">Ice</a>
                 <a class="dropdown-item" href="#">Fighting</a>
                 <a class="dropdown-item" href="#">Poison</a>
